public/style.css
@font-face {
  font-family: "mercyregular";
  src: url("fonts/fontsfree-net-mercy-regular-webfont.woff2") format("woff2");
  src: url("fonts/fontsfree-net-mercy-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  color: rgba(22, 22, 22, 0.22);
}

@font-face {
  font-family: "clear_sans_thinregular";
  src: url("fonts/fontsfree-net-clearsans-thin-webfont.woff2") format("woff2");
  src: url("fonts/fontsfree-net-clearsans-thin-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "quicksandlight";
  src: url("/fonts/quicksand-variablefont_wght-webfont.woff2") format("woff2");
  src: url("/fonts/quicksand-variablefont_wght-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "highvalleyregular";
  src: url("fonts/fontsfree-net-highvalley-webfont.woff2") format("woff2");
  src: url("fonts/fontsfree-net-highvalley-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'balcony_signatureregular';
  src: url('fonts/fontsfree-net-balcony-webfont.woff2') format('woff2');
  src: url('fonts/fontsfree-net-balcony-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "clear_sans_thinregular";
}

html,
body {
  width: 100%;
  overflow-x: hidden;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}


.homeContent {
  display: flex;
  flex-direction: row;
  height: 100%;
}

.reminder-button {
  border-radius: 3px;
  padding: 5px 10px;
  background-color: #84a98c;
  color: white;
  border: none;
  margin-left: 12px;
}

/* Game */
.gameFrame {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
  height: 525px;
  border: solid #d1d1d0 1px;
  border-radius: 50% / 35%;
  position: relative;
  overflow: hidden;
}

.gameFrame.morning {
  background: linear-gradient(180deg, #bde0fe 70%, #008000 30%);
}
.gameFrame.afternoon {
  background: linear-gradient(180deg, #e3f2fd 70%, #aacc00 30%);
}
.gameFrame.evening {
  background: linear-gradient(180deg, #031d44 70%, #41521f 30%);
  color: rgb(153, 153, 153);
}

.gameFrame .content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 55px;
  position: relative;
}

.gameFrame .level {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gameFrame .level h1 {
  font-size: 30px;
  font-family: "quicksandlight";
  font-weight: 500;
}
.gameFrame .level h2 {
  font-size: 20px;
  font-family: "quicksandlight";
  font-weight: 400;
}

.gameFrame .progress {
  width: 60%;
}

.gameFrame .game {
  display: flex;
  flex-direction: row;
  margin-top: 30px;
}

.tree {
  width: 75%;
  height: auto;
  flex-grow: 3;
}

.inventory {
  margin: 15px;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 2;
  margin: 15px;
}

.inventory .chest {
  width: 57px;
}

.inventory .rewards {
  display: flex;
  flex-direction: column;
}

.inventory .item {
  display: flex;
  flex-direction: row;
}

.inventory .img {
  width: 40px;
  margin: 3px;
}

.inventory span {
  font-size: 9px;
}

.game .bubble {
  font-size: 9px;
}

.gameFrame .congrats {
  height: 350px;
  width: 300px;
  position: absolute;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gameFrame .congrats .message {
  position: absolute;
  padding: 8px;
  z-index: 5;
  top: 50%;
  border-radius: 5px;
  background-color: #84a98c;
  opacity: 93%;
  color: white;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gameFrame .message h1{
  font-size: 35px
}
.gameFrame .message h2{
  font-size: 25px;
}

/* .gameFrame .game-instructions {
  align-self: flex-end;
  margin-right: 50px;
  position: absolute;
  right: 7%;
  bottom: 15%;
} */

.game-instructions-button-pigeon {
  padding: 0;
  align-self: flex-end;
  position: absolute;
  right: 15%;
  bottom: 1%;
  background-color: transparent;
  border: none;
}

.game-instructions-button-fly {
  padding: 0;
  align-self: flex-end;
  position: absolute;
  right: 15%;
  bottom: 85%;
  background-color: transparent;
  border: none;
}

.game-instructions-button img {
  padding-top: 10px;
}

/*Login / Signup*/
.body-content-signin {
  display: flex;
  justify-content: center;
  align-items: center;
}

.signin {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 525px;
  width: 1000px;
  position: relative;
}

.signin-info {
  height: 100%;
  width: 50%;
  padding: 20px;
  display: flex;
  font-weight: 300;
  border: solid rgb(178, 178, 178) 0.5px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 0.5rem;
}

.signin-info.login {
  background-color: #deebdd;
  background-image: linear-gradient(315deg, #e9f1e8 26%, #bddcc0 74%);
}

.signin-info.signup {
  background-color: #e4eee9;
  background-image: linear-gradient(315deg, #e4eee9 26%, #93a5ce 74%);
}

.signin-info h1 {
  font-family: "mercyregular";
  font-size: 60px;
  color: rgba(0, 0, 0, 0.6);
  position: absolute;
  top: 60px;
}

.signin-info .form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 120px;
}

.signin-info form {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.signin-info .form-element {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  margin: 5px;
}

.signin-info input {
  border-radius: 3px;
  color: gray;
  font-family: sans-serif;
  font-weight: 300;
  font-size: 13px;
  padding: 5px;
  border: solid #cccccc;
}
/* ... */

